# rectilinear_decomposition

./: Cargo.toml
benches/: benchmark.rs
src/: gen.rs  lib.rs  main.rs  polygon.rs
